--- a/_extras/bimsb_seminar.html
+++ b/_extras/bimsb_seminar.html
@@ -1,6 +1,6 @@
 ---
 layout: extra
-title: BIMSB Seminar
+title: BIMSB Seminar!
 permalink: /bimsb_seminar/
 published: true
 ---
@@ -25,17 +25,6 @@ published: true
         <div id="bimsb-future" class="tab-pane fade in active">
 
         <div class="row">
-<div class="col-md-1"><p>17 Oct<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=http://mbg.au.dk/en/research/research-areas/gene-expression-gene-medicine/torben-heick-jensen/ target="_blank"><b>Torben Heick Jensen</b></a>, Aarhus University<br/><small>Host: Markus Landthaler, Location: Hist. Hörsaal Haus 55</small></p>
-</div>
-<div class="col-md-6">
-<p>Sorting nuclear RNA for function or decay</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
 <div class="col-md-1"><p>24 Oct<br/><small>14:00</small></p></div>
 <div class="col-md-5">
 <p><a href=http://sabatinilab.wi.mit.edu/ target="_blank"><b>Greg Sienski (Sabatini Lab)</b></a>, Whitehead Institute<br/><small>Host: Markus Landthaler, Location: Dendrits 2/3</small></p>
@@ -49,7 +38,7 @@ published: true
 <div class="row">
 <div class="col-md-1"><p>12 Feb 2018<br/><small>14:00</small></p></div>
 <div class="col-md-5">
-<p><a href=http://marciuslab.org/ target="_blank"><b>Marc A. Marti-Renom</b></a>, Center for Genomic Regulation Barcelona<br/><small>Host: Ana Pombo, Location: </small></p>
+<p><a href=http://marciuslab.org/ target="_blank"><b>Marc A. Marti-Renom</b></a>, Center for Genomic Regulation Barcelona<br/><small>Host: Ana Pombo, Location: Axon II</small></p>
 </div>
 <div class="col-md-6">
 <p>TBA</p>
@@ -60,7 +49,7 @@ published: true
 <div class="row">
 <div class="col-md-1"><p>17 Apr 2018<br/><small>14:00</small></p></div>
 <div class="col-md-5">
-<p><a href=http://plathlab.com/ target="_blank"><b>Kathrin Plath</b></a>, UCLA<br/><small>Host: Baris Tursun, Location: </small></p>
+<p><a href=http://plathlab.com/ target="_blank"><b>Kathrin Plath</b></a>, UCLA<br/><small>Host: Baris Tursun, Location: Axon II</small></p>
 </div>
 <div class="col-md-6">
 <p>TBA</p>
@@ -75,155 +64,12 @@ published: true
         <div id="bimsb-past-2017" class="tab-pane fade">
 
         <div class="row">
-<div class="col-md-1"><p>18 Jul<br/><small>14:00</small></p></div>
+<div class="col-md-1"><p>01 Feb<br/><small>14:00</small></p></div>
 <div class="col-md-5">
-<p><a href=http://www.imba.oeaw.ac.at/research/stefan-ameres/ target="_blank"><b>Stefan Ameres</b></a>, IMBA<br/><small>Host: Markus Landthaler, Location: Dendriten 2+3</small></p>
+<p><a href=http://compgenomics.weizmann.ac.il/tanay/ target="_blank"><b>Amos Tanay</b></a>, Weizmann Institute<br/><small>Host: Philipp Junker, Location: Axon 1</small></p>
 </div>
 <div class="col-md-6">
-<p>Mechanism and Biology of RNA Silencing</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>22 Jun<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=http://yeolab.github.io/gene-yeo/ target="_blank"><b>Gene Yeo</b></a>, UCSD<br/><small>Host: Uwe Ohler, Location: Axon 1</small></p>
-</div>
-<div class="col-md-6">
-<p>Insights into development and disease from large-scale studies of protein-RNA interactions</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>30 May<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=http://www.buchholzlab.org/ target="_blank"><b>Frank Buchholz</b></a>, TU Dresden<br/><small>Host: Uwe Ohler, Location: Hist. Hörsaal</small></p>
-</div>
-<div class="col-md-6">
-<p>Development of genomic medicine tools to decipher disease mechanisms</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>23 May<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=http://www.theosysbio.bio.ic.ac.uk/people/michael-stumpf/ target="_blank"><b>Michael Stumpf</b></a>, Imperial College London<br/><small>Host: Ana Pombo, Location: Hist. Hörsaal</small></p>
-</div>
-<div class="col-md-6">
-<p>The dynamics of gene regulation networks during stem cell differentiation</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>09 May<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=https://www.molgen.mpg.de/3671240/cv-andreas-mayer target="_blank"><b>Andreas Mayer</b></a>, Max Planck Institute for Molecular Genetics<br/><small>Host: Uwe Ohler, Location: Axon 2</small></p>
-</div>
-<div class="col-md-6">
-<p>Visualizing chromatin-mediated genome transcription at nucleotide resolution</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>08 May<br/><small>10:30</small></p></div>
-<div class="col-md-5">
-<p><a href=http://www.stowers.org/faculty/zeitlinger-lab target="_blank"><b>Julia Zeitlinger</b></a>, Stowers Institute for Medical Research<br/><small>Host: Ana Pombo, Location: Axon 1</small></p>
-</div>
-<div class="col-md-6">
-<p>Peaking into transcription using high-resolution genomics techniques</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>02 May<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=http://www.sys-bio.net/people:nils_bluethgen target="_blank"><b>Nils Blüthgen</b></a>, Charité<br/><small>Host: Nikolaus Rajewsky, Location: Axon 2</small></p>
-</div>
-<div class="col-md-6">
-<p>Using perturbation data to reconstruct signalling networks in cancer.</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>11 Apr<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=https://www.dzne.de/en/sites/goettingen/forschergruppen/bonn.html target="_blank"><b>Stefan Bonn</b></a>, DZNE Göttingen<br/><small>Host: Robert Zinzen, Location: Axon 2</small></p>
-</div>
-<div class="col-md-6">
-<p>Can we predict biological processes and human disease?</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>04 Apr<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=http://www.acgt.co.za/profiles/dr-musa-mhlanga target="_blank"><b>Musa Mhlanga</b></a>, University of Cape Town<br/><small>Host: Ana Pombo, Location: Axon 2</small></p>
-</div>
-<div class="col-md-6">
-<p>Lncing Genome architecture to innate immunity</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>31 Mar<br/><small>11:00</small></p></div>
-<div class="col-md-5">
-<p><a href=http://www.une.edu/people/donald-edward-olins target="_blank"><b>Donald and Ada Olins</b></a>, University of New England<br/><small>Host: Ana Pombo, Location: Axon 2</small></p>
-</div>
-<div class="col-md-6">
-<p>Epichromatin: Nucleosomes at the Surface</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>28 Mar<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=https://www.garfieldlab.org/ target="_blank"><b>David Garfield</b></a>, IRI Berlin<br/><small>Host: Nikolaus Rajewsky, Location: Axon 2</small></p>
-</div>
-<div class="col-md-6">
-<p>Characterising embryonic regulatory landscapes using lineage-specific DNase-Seq and single-cell ATAC-Seq</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>14 Mar<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=http://www.crbm.cnrs.fr/index.php/en/patrick-lemaire-uk target="_blank"><b>Patrick Lemaire</b></a>, Centre for Macromolecular Biochemistry Research Montpellier<br/><small>Host: Stephan Preibisch, Location: Axon 2</small></p>
-</div>
-<div class="col-md-6">
-<p>Embryonic inductions may constrain the evolution of ascidian embryonic morphogenesis</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>07 Mar<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=https://www.unil.ch/dgm/en/home/menuinst/research-groups/ana-marques.html target="_blank"><b>Ana Marques</b></a>, University of Lausanne<br/><small>Host: Ana Pombo, Location: Axon 1</small></p>
-</div>
-<div class="col-md-6">
-<p>Complex trait-relevant lincRNAs can regulate gene expression by modulating local chromosomal architecture</p>
-</div>
-</div>
-<hr/><br/>
-
-<div class="row">
-<div class="col-md-1"><p>28 Feb<br/><small>14:00</small></p></div>
-<div class="col-md-5">
-<p><a href=https://www.uni-goettingen.de/en/57988.html target="_blank"><b>Steven A. Johnsen</b></a>, University Medical Center Göttingen<br/><small>Host: Ana Pombo, Location: Axon 2</small></p>
-</div>
-<div class="col-md-6">
-<p>Epigenetic Regulation of Cell Fate Specification</p>
+<p>Transcriptional and epigenetic control in embryonic and stem cell differentiation</p>
 </div>
 </div>
 <hr/><br/>
@@ -240,12 +86,166 @@ published: true
 <hr/><br/>
 
 <div class="row">
-<div class="col-md-1"><p>01 Feb<br/><small>14:00</small></p></div>
+<div class="col-md-1"><p>28 Feb<br/><small>14:00</small></p></div>
 <div class="col-md-5">
-<p><a href=http://compgenomics.weizmann.ac.il/tanay/ target="_blank"><b>Amos Tanay</b></a>, Weizmann Institute<br/><small>Host: Philipp Junker, Location: Axon 1</small></p>
+<p><a href=https://www.uni-goettingen.de/en/57988.html target="_blank"><b>Steven A. Johnsen</b></a>, University Medical Center Göttingen<br/><small>Host: Ana Pombo, Location: Axon 2</small></p>
 </div>
 <div class="col-md-6">
-<p>Transcriptional and epigenetic control in embryonic and stem cell differentiation</p>
+<p>Epigenetic Regulation of Cell Fate Specification</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>07 Mar<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=https://www.unil.ch/dgm/en/home/menuinst/research-groups/ana-marques.html target="_blank"><b>Ana Marques</b></a>, University of Lausanne<br/><small>Host: Ana Pombo, Location: Axon 1</small></p>
+</div>
+<div class="col-md-6">
+<p>Complex trait-relevant lincRNAs can regulate gene expression by modulating local chromosomal architecture</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>14 Mar<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=http://www.crbm.cnrs.fr/index.php/en/patrick-lemaire-uk target="_blank"><b>Patrick Lemaire</b></a>, Centre for Macromolecular Biochemistry Research Montpellier<br/><small>Host: Stephan Preibisch, Location: Axon 2</small></p>
+</div>
+<div class="col-md-6">
+<p>Embryonic inductions may constrain the evolution of ascidian embryonic morphogenesis</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>28 Mar<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=https://www.garfieldlab.org/ target="_blank"><b>David Garfield</b></a>, IRI Berlin<br/><small>Host: Nikolaus Rajewsky, Location: Axon 2</small></p>
+</div>
+<div class="col-md-6">
+<p>Characterising embryonic regulatory landscapes using lineage-specific DNase-Seq and single-cell ATAC-Seq</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>31 Mar<br/><small>11:00</small></p></div>
+<div class="col-md-5">
+<p><a href=http://www.une.edu/people/donald-edward-olins target="_blank"><b>Donald and Ada Olins</b></a>, University of New England<br/><small>Host: Ana Pombo, Location: Axon 2</small></p>
+</div>
+<div class="col-md-6">
+<p>Epichromatin: Nucleosomes at the Surface</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>04 Apr<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=http://www.acgt.co.za/profiles/dr-musa-mhlanga target="_blank"><b>Musa Mhlanga</b></a>, University of Cape Town<br/><small>Host: Ana Pombo, Location: Axon 2</small></p>
+</div>
+<div class="col-md-6">
+<p>Lncing Genome architecture to innate immunity</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>11 Apr<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=https://www.dzne.de/en/sites/goettingen/forschergruppen/bonn.html target="_blank"><b>Stefan Bonn</b></a>, DZNE Göttingen<br/><small>Host: Robert Zinzen, Location: Axon 2</small></p>
+</div>
+<div class="col-md-6">
+<p>Can we predict biological processes and human disease?</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>02 May<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=http://www.sys-bio.net/people:nils_bluethgen target="_blank"><b>Nils Blüthgen</b></a>, Charité<br/><small>Host: Nikolaus Rajewsky, Location: Axon 2</small></p>
+</div>
+<div class="col-md-6">
+<p>Using perturbation data to reconstruct signalling networks in cancer.</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>08 May<br/><small>10:30</small></p></div>
+<div class="col-md-5">
+<p><a href=http://www.stowers.org/faculty/zeitlinger-lab target="_blank"><b>Julia Zeitlinger</b></a>, Stowers Institute for Medical Research<br/><small>Host: Ana Pombo, Location: Axon 1</small></p>
+</div>
+<div class="col-md-6">
+<p>Peaking into transcription using high-resolution genomics techniques</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>09 May<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=https://www.molgen.mpg.de/3671240/cv-andreas-mayer target="_blank"><b>Andreas Mayer</b></a>, Max Planck Institute for Molecular Genetics<br/><small>Host: Uwe Ohler, Location: Axon 2</small></p>
+</div>
+<div class="col-md-6">
+<p>Visualizing chromatin-mediated genome transcription at nucleotide resolution</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>23 May<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=http://www.theosysbio.bio.ic.ac.uk/people/michael-stumpf/ target="_blank"><b>Michael Stumpf</b></a>, Imperial College London<br/><small>Host: Ana Pombo, Location: Hist. Hörsaal</small></p>
+</div>
+<div class="col-md-6">
+<p>The dynamics of gene regulation networks during stem cell differentiation</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>30 May<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=http://www.buchholzlab.org/ target="_blank"><b>Frank Buchholz</b></a>, TU Dresden<br/><small>Host: Uwe Ohler, Location: Hist. Hörsaal</small></p>
+</div>
+<div class="col-md-6">
+<p>Development of genomic medicine tools to decipher disease mechanisms</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>22 Jun<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=http://yeolab.github.io/gene-yeo/ target="_blank"><b>Gene Yeo</b></a>, UCSD<br/><small>Host: Uwe Ohler, Location: Axon 1</small></p>
+</div>
+<div class="col-md-6">
+<p>Insights into development and disease from large-scale studies of protein-RNA interactions</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>18 Jul<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=http://www.imba.oeaw.ac.at/research/stefan-ameres/ target="_blank"><b>Stefan Ameres</b></a>, IMBA<br/><small>Host: Markus Landthaler, Location: Dendriten 2+3</small></p>
+</div>
+<div class="col-md-6">
+<p>Mechanism and Biology of RNA Silencing</p>
+</div>
+</div>
+<hr/><br/>
+
+<div class="row">
+<div class="col-md-1"><p>17 Oct<br/><small>14:00</small></p></div>
+<div class="col-md-5">
+<p><a href=http://mbg.au.dk/en/research/research-areas/gene-expression-gene-medicine/torben-heick-jensen/ target="_blank"><b>Torben Heick Jensen</b></a>, Aarhus University<br/><small>Host: Markus Landthaler, Location: Hist. Hörsaal Haus 55</small></p>
+</div>
+<div class="col-md-6">
+<p>Sorting nuclear RNA for function or decay</p>
 </div>
 </div>
 <hr/><br/>
