--- a/_external/lightsheet_workshop.html
+++ b/_external/lightsheet_workshop.html
@@ -39,7 +39,7 @@ published: true
       <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
           <a class="navbar-brand js-scroll-trigger" href="#page-top">Lightsheet Conference 2018</a>
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#nabarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fa fa-bars"></i>
           </button>
@@ -86,7 +86,7 @@ published: true
               <h2 class="section-heading text-uppercase">About the Conference</h2>
               <p class="text-muted text-left">Light sheet microscopy has emerged in the last 15 years as a powerful tool to interrogate living biological systems with unprecedented imaging speeds for as long as it takes. Large, fixed, cleared or expanded biological samples can be imaged with high resolution in a fraction of time compared to conventional microscopy approaches. When combined, the spatial coverage and temporal resolution leads to in toto recording of complex biological phenomena.</p>
               <p class="text-muted text-left">Light sheets opened entirely new windows into the inner workings of cells and organisms and re-invigorated several research fields including developmental and cell biology, physiology, neurobiology and biodiversity research. This conference marks the <b>10th Anniversary of Light Sheet Fluorescence Microscopy</b> (LSFM) meetings that <b>started in 2009 in Dresden</b>. It will bring together the technology developers and users of light sheets, showcase the latest light sheet set-ups and how to best deploy them for the benefit of the biological research community.</p>
-              <p class="text-muted text-left">A unique feature of the conference is that it immediately follows the <a href="http://meetings.embo.org/event/18-lsm" target="_blank">3rd EMBO practical course on light sheet microscopy</a> held in Dresden between August 2 nd and 12 th 2018. This course teaches light sheet microscopy to the next generation of scientists who will present the results of their light sheet experiments at the conference. Additionally, a <b>full range of commercial light sheet microscopy hardware</b> used at the course will be demonstrated at the conference.</p>
+              <p class="text-muted text-left">A unique feature of the conference is that it immediately follows the <a href="http://meetings.embo.org/event/18-lsm" target="_blank">3rd EMBO practical course on light sheet microscopy</a> held in Dresden between August 2nd and 11th 2018. This course teaches light sheet microscopy to the next generation of scientists who will present the results of their light sheet experiments at the conference. Additionally, a <b>full range of commercial light sheet microscopy hardware</b> used at the course will be demonstrated at the conference.</p>
               <br/>
             </div>
           </div>
@@ -154,7 +154,7 @@ published: true
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/Christian Conrad.jpg" alt="">
                 <h4><a href="https://ibios.dkfz.de/tbi/intelligent-imaging/research" target="_blank">Christian Conrad</a></h4>
-                <p class="text-muted">Deutsche Krebsforschung Centrum Heidelberg (DKFZ), DE</p>
+                <p class="text-muted">Deutsches Krebsforschungszentrum Heidelberg (DKFZ), DE</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -167,8 +167,8 @@ published: true
             <div class="col-sm-4">
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/Scott Fraser.jpg" alt="">
-                <h4><a href="http://fraserlab.usc.edu/" target="_blank">Scott Fraser</a></h4>
-                <p class="text-muted">University of South California, Los Angeles, USA</p>
+                <h4><a href="http://fraserlab.usc.edu/" target="_blank">Scott E. Fraser</a></h4>
+                <p class="text-muted">University of Southern California, Los Angeles, USA</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -189,7 +189,7 @@ published: true
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/Lars Hufnagel.jpg" alt="">
                 <h4><a href="https://www.embl.de/research/units/cbb/hufnagel/members/" target="_blank">Lars Hufnagel</a></h4>
-                <p class="text-muted">EMBL, Heideleberg, DE</p>
+                <p class="text-muted">EMBL, Heidelberg, DE</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -203,7 +203,7 @@ published: true
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/Florian Jug.jpg" alt="">
                 <h4><a href="https://www.mpi-cbg.de/research-groups/current-groups/florian-jug/research-focus/" target="_blank">Florian Jug</a></h4>
-                <p class="text-muted">School of Biosciences, University of Nottingham, GB</p>
+                <p class="text-muted">MPI-CBG, Dresden, DE</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -259,7 +259,7 @@ published: true
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/Peter Santi.jpg" alt="">
                 <h4><a href="http://www.neuroscience.umn.edu/people/peter-santi-phd" target="_blank">Peter Santi</a></h4>
-                <p class="text-muted">University of Minnesota, USA</p>
+                <p class="text-muted">University of Minnesota, Minneapolis, USA</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -280,7 +280,7 @@ published: true
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/Willy Supatto.jpg" alt="">
                 <h4><a href="https://portail.polytechnique.edu/lob/en/willy-supatto" target="_blank">Willy Supatto</a></h4>
-                <p class="text-muted">Ecole Polytechnique, Paris Saclay, FR</p>
+                <p class="text-muted">Ecole Polytechnique, Paris Saclay University, FR</p>
               </div>
             </div>
             <div class="col-sm-4">
@@ -545,22 +545,22 @@ published: true
                 -->
                 <h4 class="about-heading text-left">Transportation</h4>
                 <p class="text-left"><b>Via Plane</b></p>
-                <p class="text-muted text-left"><b>Dresden</b> has a relatively small <a href="http://www.dresden-airport.de/" target="_blank">airport</a> connected by Lufthansa to major German hubs such as Frankfurt, Munich and Düesseldorf. There is also an AirFrance flight from London.</p>
-                <p class="text-muted text-left"><a href="http://www.berlin-airport.de/de/reisende-sxf/index.php" target="_blank">Berlin Schoenefeld International airport</a> is about 172 km from Dresden, easily reachable by regular trains.</p>
-                <p class="text-muted text-left"><a href="http://www.prg.aero/en/" target="blank">Vaclav Havel Airport Prague</a> in the Czech Republic is another option, 160 km away, also connected by trains about every two hours.</p>
-                <p class="text-muted text-left">From the Dresden Airport, please take the train S2 available every 30 min to the train station Bahnhof-Neustadt. Then take the tram 6, in the direction Niedersedlitz, to the station Königsheimplatz. Cross the street and walk along the street Schubertstrasse till you come to Pfotenhauerstrasse and turn left. Our institute is at Pfotenhauerstrasse 108. It is a green and blue building. It takes about approx. 40 minutes.</p>
+                <p class="text-muted text-left"><b>Dresden</b> has a relatively small <a href="http://www.dresden-airport.de/" target="_blank">airport</a> connected by Lufthansa to major German hubs such as Frankfurt, Munich and Düsseldorf. There is also an Air France flight from London.</p>
+                <p class="text-muted text-left"><a href="http://www.berlin-airport.de/de/reisende-sxf/index.php" target="_blank">Berlin Schoenefeld International airport</a> is about 172 km from Dresden, easily reachable by regular trains or busses.</p>
+                <p class="text-muted text-left"><a href="http://www.prg.aero/en/" target="blank">Vaclav Havel Airport Prague</a> in the Czech Republic is another option, 160 km away, also connected by trains (about every two hours) and busses.</p>
+                <p class="text-muted text-left">From the Dresden Airport, please take the train S2 available every 30 min to the train station Bahnhof-Neustadt. Then take the tram 6, direction Niedersedlitz, to the station Königsheimplatz. Cross the street and walk along Schubertstraße until you come to Pfotenhauerstraße and turn left. Our institute is at Pfotenhauerstraße 108. It is a green and blue building. It takes about 40 minutes.</p>
                 <p class="text-left"><b>Via Train</b></p>
-                <p class="text-muted text-left"><b>Dresden</b> is easily reachable by train. There are two train stations in Dresden: <b>Hauptbahnhof</b> and <b>Bahnhof Neustadt</b>.</p>
-                <p class="text-muted text-left">From the <b>main train station</b> [Hauptbahnhof] please take the tram 10, direction Striesen, to the station Fetscherplatz. Then take the tram 12, in the direction Striesen, to the station Königsheimplatz. Cross the street and walk along the street Schubertstrasse till you come to Pfotenhauerstrasse and turn left. Our institute is at Pfotenhauerstrasse 108. It is a green and blue building. It takes about approx. 20 minutes.</p>
-                <p class="text-muted text-left">You can also use tram 3 (Wilder Mann) or 7 (Weixdorf) and change at Pirnaischer Platz to bus 62 (Johannstadt). The terminal stop is right opposite ofthe Institute. It takes about approx. 23 minutes.</p>
-                <p class="text-muted text-left">From the train station <b>Bahnhof Neustadt</b> take tram 6, in the direction Niedersedlitz, to the station Königsheimplatz. Cross the street and walk along the street Schubertstrasse till you come to Pfotenhauerstrasse and turn left. Our institute is at Pfotenhauerstrasse 108. It takes about approx. 15 minutes.</p>
+                <p class="text-muted text-left"><b>Dresden</b> is easily reachable by train. There are two train stations in Dresden: <b>Hauptbahnhof</b> and <b>Bahnhof-Neustadt</b>.</p>
+                <p class="text-muted text-left">From the <b>main train station</b> [Hauptbahnhof] please take the tram 10, direction Striesen, to the station Fetscherplatz. Then take the tram 12, direction Striesen, to the station Königsheimplatz. Cross the street and walk along Schubertstraße until you come to Pfotenhauerstraße and turn left. Our institute is at Pfotenhauerstraße 108. It is a green and blue building. It takes about 20 minutes.</p>
+                <p class="text-muted text-left">You can also use tram 3 (Wilder Mann) or 7 (Weixdorf) and change at Pirnaischer Platz to bus 62 (Johannstadt). The terminal stop is right opposite of the Institute. It takes about 23 minutes.</p>
+                <p class="text-muted text-left">From the train station <b>Bahnhof-Neustadt</b> take tram 6, direction Niedersedlitz, to the station Königsheimplatz. Cross the street and walk along Schubertstraße till you come to Pfotenhauerstraße and turn left. Our institute is at Pfotenhauerstraße 108. It takes about 15 minutes.</p>
                 <p class="text-left"><b>Reaching the Institute via tram or bus</b></p>
-                <p class="text-muted text-left">Take tram 6 or 12 to the station Königsheimplatz. Walk along the street Schubertstrasse till you come to Pfotenhauerstrasse and turn left.</p>
-                <p class="text-muted text-left">Alternatively, take bus 62 or 74 to Johannstadt.</p>
+                <p class="text-muted text-left">Take tram 6 or 12 to the station Königsheimplatz. Walk along Schubertstraße until you come to Pfotenhauerstraße and turn left.</p>
+                <p class="text-muted text-left">Alternatively, take bus 62 to Johannstadt or 64 to stop Pfotenhauerstraße.</p>
                 <p class="text-muted text-left">To check the schedule of public transport use this <a href="http://www.dvb.de/en/Timetable/Journey-planner/index.aspx?vaform%5Bzieltypeswitch_address%5D=1&vaform%5Bzielort%5D=Dresden&vaform%5Bzielname%5D=Pfotenhauerstra%C3%9Fe+108" target="_blank">website</a>.</p>
                 <p class="text-left"><b>Via Car</b></p>
                 <p class="text-muted text-left">From Berlin (north)</p>
-                <p class="text-muted text-left">Leave Autobahn A4 at the exit Dresden-Hellerau, which will take you onto the B 170 heading towards the city center (Zentrum). Stay on the B 170 for about 5 km until it reaches the intersection "Carolaplatz". At the next intersection turn right onto the "Albertbrücke" bridge. From now on follow the signs "Uniklinikum" to the medical clinic. Once over the bridge, you have to drive a circle in order to turn to the left, which means taking the second street to the right, then turn to the right and to the right again onto "Käthe-Kollwitz-Ufer." Follow "Käthe-Kollwitz-Ufer" and turn right into "Fetscherstrasse." At the first intersection turn left into "Pfotenhauerstrasse." Our institute is on the right.</p>
+                <p class="text-muted text-left">Leave A4 at the exit Dresden-Hellerau, which will take you onto the B 170 heading towards the city center (Zentrum). Stay on the B 170 for about 5 km until it reaches the intersection "Carolaplatz". At the next intersection turn right onto the "Albertbrücke" bridge. From now on follow the signs "Uniklinikum" to the medical clinic. Once over the bridge, you have to drive a circle in order to turn to the left, which means taking the second street to the right, then turn to the right and to the right again onto "Käthe-Kollwitz-Ufer." Follow "Käthe-Kollwitz-Ufer" and turn right into "Fetscherstraße." At the first intersection turn left into "Pfotenhauerstraße." Our institute is on the right.</p>
                 <p class="text-muted text-left">From Munich/Frankfurt/Leipzig (south)</p>
                 <p class="text-muted text-left">Leave Autobahn A4 at the exit Dresden-Altstadt, which will take you onto the B 6. Follow the signs to the city center (Zentrum) and stay on the B 6 for about 4 km until an intersection with a Turkish Mosque on the left side. Still following the signs to the city center (Zentrum), turn left and pass the Mosque. Follow the road which turns to the right and goes under the railway bridge. This leads you to "Uferstrasse" which takes two sharp bends (passing Semperoper opera house). Now you are on the "Terrassenufer" which takes you parallel to the river Elbe. Stay on this road following the sign "Uniklinikum." The street merges to "Käthe-Kollwitz-Ufer." Follow "Käthe-Kollwitz-Ufer" and turn right into "Fetscherstrasse." At the first intersection turn left into "Pfotenhauerstrasse." Our institute is on the right</p>
                 <p class="text-muted text-left">From Prague</p>
@@ -569,7 +569,7 @@ published: true
                 <h4 class="about-heading text-left">About the Area</h4>
                 <p class="text-muted text-left"><a href="http://www.mpi-cbg.de/" target="blank">The Max Planck Institute of Molecular Cell Biology and Genetics (MPI-CBG)</a>, founded in 1998, is one of 80 institutes of the Max Planck Society, an independent non-profit organization in Germany.</p>
                 <p class="text-muted text-left">In recent years Dresden has developed at a tremendous pace into one of the leading scientific centers in the areas of cell and developmental biology, biomedicine, biophysics and bioengineering. Dresden is characterized by a vibrant international community of researchers that perform cross-disciplinary research at the highest level in state-of-the-art research centers at the Technische Universität Dresden (TUD), the Max Planck Institute of Molecular Cell Biology and Genetics (MPI-CBG), the Max Planck Institute for the Physics of Complex Systems (MPI-PKS) and several Leibniz and Fraunhofer Institutes.</p>
-                <p class="text-muted text-left">Dresden is considered one of the most beautiful cities of Germany. It is located in the east of Germany in the valley of the river Elbe. Dresden is about 2.5h away from Berlin as well as Prague. Being the capital of Saxony it has been a center of political and cultural life for centuries, and its skyline with the Zwinger, the Green Vault, the Painting Gallery, the castle, the Semper Opera, the Court Chapel, Taschenberg Palace, and the recently rebuilt Frauenkirche are world-famous. But the city is not only famous for its baroque architecture and beautiful surrounding landscapes. Dresden has evolved into a vivid and international scientific and industrial center and is one of the most outstanding locations for research and science in Germany with emphasis on biotechnology, nano- and microelectronics. In appreciation of this dynamic development, Dresden has been awarded the “City of Science” in 2006.</p>
+                <p class="text-muted text-left">Dresden is considered one of the most beautiful cities of Germany. It is located in the east of Germany in the valley of the river Elbe. Dresden is about 2.5 hrs away from Berlin as well as Prague. Being the capital of Saxony it has been a center of political and cultural life for centuries, and its skyline with the Zwinger, the Green Vault, the Painting Gallery, the castle, the Semper Opera, the Court Chapel, Taschenberg Palace, and the recently rebuilt Frauenkirche are world-famous. But the city is not only famous for its baroque architecture and beautiful surrounding landscapes. Dresden has evolved into a vivid and international scientific and industrial center and is one of the most outstanding locations for research and science in Germany with emphasis on biotechnology, nano- and microelectronics. In appreciation of this dynamic development, Dresden has been awarded the “City of Science” in 2006.</p>
 
               </div>
             </div>
@@ -641,3 +641,4 @@ published: true
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="javascripts/bootstrap.js"></script>
+
